--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-style-bindings",
   "version": "0.0.1",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "An easy way to bind inline styles to a component",
   "directories": {
     "doc": "doc",
     "test": "tests"
